# Profiling_gender_dialect

./: .gitignore  ARCHITECTURE.md  MANIFEST.in  README.md  app.py  compare_encoders.py  eval.py  finetune.py  infer.py  prepare_data.py  pyproject.toml  requirements.txt  requirements_hf.txt
configs/: eval.yaml  eval.yaml.example  eval_phowhisper.yaml  eval_unified_phowhisper_base_lora.yaml  eval_unified_phowhisper_medium_lora.yaml  finetune.yaml  finetune.yaml.example  finetune_unified.yaml  finetune_unified_phowhisper_base.yaml  finetune_unified_phowhisper_base_lora.yaml  finetune_unified_phowhisper_large.yaml  finetune_unified_phowhisper_medium_full.yaml  finetune_unified_phowhisper_medium_lora.yaml  infer.yaml  infer.yaml.example  infer_pho_hf.yaml  train_ecapa.yaml  vimd_train.yaml
notebooks/: ViDM_dataset.ipynb  base_model_pipeline.ipynb  benchmark_chunkformer_vimd.ipynb  fine-tune-vimd.ipynb  finetune_ViDM.ipynb  finetune_vispeech.ipynb  resume-fine-tune-vimd.ipynb  speaker-profiling.ipynb  test_data.ipynb
speaker_profiling/: cli.py
src/: __init__.py  models.py  unified_data.py  utils.py
