[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vn-speaker-profiling"
version = "0.1.7"
description = "Production of Vietnam Post: Vietnamese speaker profiling (gender/dialect) with PhoWhisper/WavLM-family encoders."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "transformers==4.44.0",
  "librosa>=0.10.0",
  "soundfile>=0.12.0",
  "numpy<2.0",
  "safetensors>=0.4.0",
  "omegaconf>=2.3.0",
  "huggingface_hub>=0.22.0,<1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "audiomentations==0.35.0",
  "wandb>=0.16.0",
  "datasets==2.21.0",
  "accelerate==0.33.0",
  "tqdm>=4.65.0",
]
app = ["gradio>=4.0.0"]
speechbrain = ["speechbrain>=1.0.0"]

[project.scripts]
vn-speaker-profiling-infer = "speaker_profiling.cli:infer_cli"

[tool.setuptools]
packages = ["src", "speaker_profiling"]
py-modules = ["infer"] 
